
Package: PSCBS
==============

Version: 0.23.0 [2012-02-29]
o Added the PairedPSCNData class and system tests for it.


Version: 0.22.1 [2012-02-28]
o Updated package dependencies to R.rsp (>= 0.7.3) so that
  report() for PairedPSCBS no longer require non-public packages.
o Now it is possible to turn off usage of the alpha channel in
  plots generated by report(), which can be handy on systems where
  the default PNG device does not support the alpha channel.
  Example: setOption("PSCBS::report/useAlphaChannel", FALSE).


Version: 0.22.0 [2012-02-27]
o Added report() for PairedPSCBS.


Version: 0.21.0 [2012-02-27]
o Added argument 'fields' to getLocusData() for PairedPSCBS.
o Added renameChromosomes() to AbstractCBS.


Version: 0.20.0 [2012-02-26]
o Added alpha version of callGainNeutralLoss() for PairedPSCBS,
  which certainly will be updated in the future.  This caller
  is tested by the system tests.
o Added dropChangePoints() for AbstractCBS.
o Added some internal utility functions for PairedPSCBS taken
  from the aroma.cn package.  Some of these may become public
  later, but for they should be considered internal.
o ROBUSTNESS: Added more sanity checks validating the correctness 
  of what is returned by extractSegments() for CBS and PairedPSCBS.
o BUG FIX: extractSegments() for PairedPSCBS would return incorrect
  row indices, more precisely, overlapping data chunks.
o BUG FIX: bootstrapTCNandDHByRegion() for PairedPSCBS would resample
  from a subset of the intended TCNs, iff the DH mean was non-finite
  while there were still heterozygous SNPs.  This introduced a bias in
  the estimates, which was neglectable for large segments, but for very
  small segments (a few loci) it could be relatively large.


Version: 0.19.8 [2012-02-23]
o ROBUSTNESS: Package now explicitly depends on 'utils'.


Version: 0.19.7 [2012-02-22]
o BUG FIX: findLargeGaps() did not handle missing values for
  argument 'chromosome'.